--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "request-react-hooks",
-  "version": "2.0.1",
+  "version": "3.0.0",
   "description": "Hook for making asynchronous requests and subscribing to updates request state",
   "main": "lib/index.js",
   "types": "lib",
   "scripts": {
-    "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prettier": "pretty-quick --staged",
+    "eslint": "eslint --max-warnings=0 .",
+    "tslint": "tsc --noEmit",
+    "build": "rm -rf lib && tsc",
+    "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build"
   },
   "keywords": [
     "react",
@@ -19,20 +22,25 @@
   "author": "Aleksandr Jet",
   "license": "MIT",
   "devDependencies": {
-    "@types/lodash.isempty": "^4.4.6",
-    "@types/lodash.some": "^4.6.6",
-    "@types/react": "^17.0.1",
-    "prettier": "^2.2.1",
-    "react": "^17.0.1",
-    "typescript": "^4.1.3"
+    "@types/react": "17.0.8",
+    "@typescript-eslint/eslint-plugin": "4.28.1",
+    "@typescript-eslint/parser": "4.28.1",
+    "eslint": "7.29.0",
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-jest": "24.3.6",
+    "eslint-plugin-no-use-extend-native": "0.5.0",
+    "eslint-plugin-react": "7.22.0",
+    "eslint-plugin-sonarjs": "0.6.0",
+    "husky": "6.0.0",
+    "prettier": "2.3.0",
+    "pretty-quick": "3.1.0",
+    "react": "17.0.2",
+    "typescript": "4.2.4"
   },
   "peerDependencies": {
     "react": ">=16.13.1"
   },
-  "dependencies": {
-    "lodash.isempty": "^4.4.0",
-    "lodash.some": "^4.6.0"
-  },
+  "dependencies": {},
   "files": [
     "lib/",
     "src/",
