--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "tslint": "tsc --noEmit",
     "build": "rm -rf lib && tsc",
     "build-webpack": "ts-node \"./scripts/build.ts\"",
-    "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build"
+    "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
     "@babel/preset-env": "7.16.8",
     "@babel/preset-react": "7.16.7",
+    "@cypress/code-coverage": "3.9.11",
+    "@cypress/react": "5.9.2",
+    "@cypress/webpack-dev-server": "1.4.0",
+    "@types/mocha": "8.2.2",
     "@types/react": "17.0.8",
+    "@types/react-dom": "17.0.5",
     "@types/webpack": "5.28.0",
     "@typescript-eslint/eslint-plugin": "4.28.1",
     "@typescript-eslint/parser": "4.28.1",
@@ -25,21 +32,26 @@
     "babel-plugin-istanbul": "6.1.1",
     "clean-webpack-plugin": "4.0.0",
     "cypress": "8.7.0",
+    "cypress-multi-reporters": "1.5.0",
     "eslint": "7.29.0",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-no-use-extend-native": "0.5.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-sonarjs": "0.6.0",
+    "html-webpack-plugin": "^5.5.0",
     "husky": "6.0.0",
+    "mocha-junit-reporter": "2.0.2",
     "prettier": "2.3.0",
     "pretty-quick": "3.1.0",
     "react": "17.0.2",
+    "react-dom": "17.0.2",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "typescript": "4.2.4",
     "webpack": "5.66.0",
     "webpack-bundle-analyzer": "4.5.0",
+    "webpack-dev-server": "3.11.1",
     "webpack-merge": "5.8.0",
     "webpackbar": "5.0.2"
   },
