--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@cypress/code-coverage": "3.9.11",
     "@cypress/react": "5.9.2",
     "@cypress/webpack-dev-server": "1.4.0",
+    "@testing-library/react-hooks": "^7.0.2",
+    "@types/jest": "^27.4.0",
     "@types/mocha": "8.2.2",
     "@types/react": "17.0.8",
     "@types/react-dom": "17.0.5",
@@ -41,11 +43,13 @@
     "eslint-plugin-sonarjs": "0.6.0",
     "html-webpack-plugin": "^5.5.0",
     "husky": "6.0.0",
+    "jest": "^27.5.1",
     "mocha-junit-reporter": "2.0.2",
     "prettier": "2.3.0",
     "pretty-quick": "3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "ts-jest": "^27.1.3",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "typescript": "4.2.4",
