--- a/package.json
+++ b/package.json
@@ -5,14 +5,19 @@
   "main": "lib/index.js",
   "types": "lib",
   "scripts": {
+    "analyze": "webpack-bundle-analyzer \"./lib/stats.json\"",
     "prettier": "pretty-quick --staged",
     "eslint": "eslint --max-warnings=0 .",
     "tslint": "tsc --noEmit",
     "build": "rm -rf lib && tsc",
     "build-webpack": "ts-node \"./scripts/build.ts\"",
     "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook"
+    "test:jest": "jest",
+    "test:ject:console": "jest --config jest-ci.config.js --ci --colors",
+    "open-lcov-jest": "open \"./test-results/jest-coverage/lcov-report/index.html\"",
+    "test:cypress": "cypress open-ct",
+    "test:cypress:console": "cypress run-ct --config video=false --config-file \"./cypress-ci.json\"",
+    "open-lcov:cypress": "open coverage/lcov-report/index.html"
   },
   "devDependencies": {
     "@babel/core": "7.16.7",
@@ -36,6 +41,7 @@
     "cypress": "8.7.0",
     "cypress-multi-reporters": "1.5.0",
     "eslint": "7.29.0",
+    "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-import": "2.22.1",
     "eslint-plugin-jest": "24.3.6",
     "eslint-plugin-no-use-extend-native": "0.5.0",
@@ -44,6 +50,8 @@
     "html-webpack-plugin": "^5.5.0",
     "husky": "6.0.0",
     "jest": "^27.5.1",
+    "jest-junit": "12.0.0",
+    "jest-sonar": "0.2.12",
     "mocha-junit-reporter": "2.0.2",
     "prettier": "2.3.0",
     "pretty-quick": "3.1.0",
