--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,14 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
 .pnp.js
 
-# testing
-/coverage
-
 /lib/*
+
+#tests
 .nyc_output
 test-results
+coverage.json
 
 # misc
 .DS_Store
@@ -25,5 +23,3 @@ test-results
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-
-.prettierrc.json
