remove old files

--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "prettier": "pretty-quick --staged",
     "eslint": "eslint --max-warnings=0 .",
     "tslint": "tsc --noEmit",
-    "build": "rm -rf lib && tsc",
-    "build-webpack": "ts-node \"./scripts/build.ts\"",
+    "build": "ts-node \"./scripts/build.ts\"",
     "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build",
     "test:jest": "jest",
     "test:jest:console": "jest --config jest-ci.config.js --ci --colors",
