--- a/package.json
+++ b/package.json
@@ -5,11 +5,10 @@
   "main": "lib/index.js",
   "types": "lib",
   "scripts": {
-    "analyze": "webpack-bundle-analyzer \"./lib/stats.json\"",
     "prettier": "pretty-quick --staged",
-    "eslint": "eslint --max-warnings=0 .",
-    "tslint": "tsc --noEmit",
-    "build": "ts-node \"./scripts/build.ts\"",
+    "eslint": "eslint --max-warnings=0 --cache .",
+    "tslint": "tsc --incremental",
+    "build": "scripts/build.sh",
     "pre-publish": "npm run prettier && npm run tslint && npm run eslint && npm run build",
     "test:jest": "jest",
     "test:jest:console": "jest --config jest-ci.config.js --ci --colors",
@@ -32,7 +31,7 @@
     "@cypress/react": "5.9.2",
     "@cypress/webpack-dev-server": "1.4.0",
     "@testing-library/react-hooks": "^7.0.2",
-    "@types/jest": "^27.4.0",
+    "@types/jest": "27.4.0",
     "@types/mocha": "8.2.2",
     "@types/react": "17.0.8",
     "@types/react-dom": "17.0.5",
@@ -42,9 +41,9 @@
     "app-root-path": "3.0.0",
     "babel-loader": "8.2.3",
     "babel-plugin-istanbul": "6.1.1",
-    "clean-webpack-plugin": "4.0.0",
     "cypress": "8.7.0",
     "cypress-multi-reporters": "1.5.0",
+    "esbuild": "0.17.15",
     "eslint": "7.29.0",
     "eslint-plugin-cypress": "2.11.3",
     "eslint-plugin-import": "2.22.1",
@@ -52,9 +51,8 @@
     "eslint-plugin-no-use-extend-native": "0.5.0",
     "eslint-plugin-react": "7.22.0",
     "eslint-plugin-sonarjs": "0.6.0",
-    "html-webpack-plugin": "^5.5.0",
     "husky": "6.0.0",
-    "jest": "^27.5.1",
+    "jest": "27.5.1",
     "jest-junit": "12.0.0",
     "jest-sonar": "0.2.12",
     "mocha-junit-reporter": "2.0.2",
@@ -62,20 +60,16 @@
     "pretty-quick": "3.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "ts-jest": "^27.1.3",
+    "ts-jest": "27.1.3",
     "ts-loader": "9.2.6",
     "ts-node": "10.4.0",
     "typescript": "4.2.4",
     "webpack": "5.66.0",
-    "webpack-bundle-analyzer": "4.5.0",
-    "webpack-dev-server": "3.11.1",
-    "webpack-merge": "5.8.0",
-    "webpackbar": "5.0.2"
+    "webpack-dev-server": "3.11.1"
   },
   "peerDependencies": {
     "react": ">=16.13.1"
   },
-  "dependencies": {},
   "files": [
     "lib/",
     "src/",
