--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "request-react-hooks",
-  "version": "4.1.2",
+  "version": "4.1.3",
   "description": "Hook for making asynchronous requests and subscribing to updates request state",
   "main": "lib-esm/index.js",
   "types": "lib-esm",
+  "type": "module",
   "exports": {
     "types": "./lib-esm/*.d.ts",
     "import": "./lib-esm/index.js",
